# gitlab-ci-build-statuses

./: .gitignore  .hlint.yaml  .markdownlint.json  .stan.toml  .tokeignore  .travis.yml  ChangeLog.md  Dockerfile  LICENSE  README.md  gitlab-ci-build-statuses.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml  ci.yml  release.yml  stack-deps.yml
app/: Main.hs
docker-compose/: docker-compose.yml  prometheus.yml
docker-compose/grafana/: grafana.config
docker-compose/grafana/provisioning/dashboards/: builds.json  dashboard.yml  docker.json  grafana.json  node-exporter.json  prometheus.json
docker-compose/grafana/provisioning/datasources/: datasource.yml
docker-compose/prometheus/: prometheus.yml
src/: App.hs  Config.hs  Env.hs  Html.hs  Lib.hs  Logger.hs  Metrics.hs  Server.hs  Util.hs
src/Config/: Backbone.hs  Config.hs  Interpreters.hs  Util.hs
src/Core/: BuildStatuses.hs  Effects.hs  Jobs.hs  Lib.hs  OverallStatus.hs  Runners.hs  Shared.hs
src/Core/UseCases/: Lib.hs  Runners.hs
src/HTTP/: Html.hs  Metrics.hs  Server.hs
src/Inbound/HTTP/: Html.hs  Metrics.hs  Server.hs  Util.hs
src/Inbound/HTTP/BuildStatuses/: Html.hs
src/Inbound/HTTP/Runners/: Html.hs
src/Inbound/HTTP/Statuses/: Html.hs
src/Inbound/Jobs/: BuildStatuses.hs  Runners.hs  Updating.hs  UpdatingRunners.hs
src/Inbound/Jobs/Inbound/Jobs/: Updating.hs
src/Metrics/: Health.hs  Metrics.hs  PrometheusUtils.hs
src/Outbound/Gitlab/: GitlabAPI.hs  GtlabAPI.hs  Helpers.hs  Instances.hs  Pipelines.hs  Projects.hs  RequestResponseUtils.hs  Runners.hs
src/Outbound/Storage/: InMemory.hs  InMemoryRunners.hs  InMemoryStatuses.hs
src/Outbound/Storage/BuildStatuses/: InMemory.hs
src/Outbound/Storage/Runners/: InMemory.hs
src/Ports/Inbound/HTTP/: Server.hs  Util.hs
src/Ports/Inbound/HTTP/BuildStatuses/: Html.hs
src/Ports/Inbound/HTTP/Runners/: Html.hs
src/Ports/Inbound/Jobs/: BuildStatuses.hs  Runners.hs  WaitingJobs.hs
src/Ports/Outbound/Gitlab/: Helpers.hs  Instances.hs  Jobs.hs  Pipelines.hs  Projects.hs  RequestResponseUtils.hs  Runners.hs  Schedules.hs
src/Ports/Outbound/Storage/BuildStatuses/: InMemory.hs
src/Ports/Outbound/Storage/Runners/: InMemory.hs
src/Ports/Outbound/Storage/WaitingJobs/: InMemory.hs
src/UseCases/: BuildStatuses.hs  Runners.hs  Shared.hs  WaitingJobs.hs
static/: jobs-2e8833d035.css  jobs-5573f9c393.css  jobs-6bdb3fb7f1.css  jobs-dc83fdaa51.css  jobs.css  normalize.css  script-0c8bd5f8d5.js  script-32964cd17f.js  script-909ec6a089.js  statuses-00dfc17107.css  statuses-0a92ee62ac.css  statuses-11c70488b8.css  statuses-179a7680dd.css  statuses-229a13b850.css  statuses-26a217ef25.css  statuses-2fad95d80d.css  statuses-484548c1a7.css  statuses-5203a91ac9.css  statuses-72ec5e8604.css  statuses-d66ed4fc6f.css  statuses-db81976afd.css  statuses-ee32aa4aac.css  statuses.css
test/: ConfigSpec.hs  GetStatusForProjectSpec.hs  OverallStatusSpec.hs  Spec.hs  TestUtils.hs
