cabal-version:  2.4
name:           gitlab-ci-build-statuses
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/l7r7/gitlab-ci-build-statuses#readme>
homepage:       https://github.com/l7r7/gitlab-ci-build-statuses#readme
bug-reports:    https://github.com/l7r7/gitlab-ci-build-statuses/issues
author:         Leonhard Riedisser
maintainer:     leo008180@googlemail.com
copyright:      2020 Leonhard Riedisser
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/l7r7/gitlab-ci-build-statuses

common common-options
  build-depends: base >=4.7 && <5
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -fhide-source-paths
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -Wunused-packages
  default-language:
    Haskell2010
  default-extensions:
    DerivingStrategies
    StrictData

library
  import: common-options
  exposed-modules:
    App
    , Config.Backbone
    , Config.Config
    , Config.Util
    , Core.BuildStatuses
    , Core.Effects
    , Core.OverallStatus
    , Core.Shared
    , Inbound.HTTP.BuildStatuses.Html
    , Inbound.HTTP.Util
    , Inbound.HTTP.Server
    , Inbound.Jobs.BuildStatuses
    , Logger
    , Metrics.Health
    , Metrics.Metrics
    , Metrics.PrometheusUtils
    , Outbound.Gitlab.Helpers
    , Outbound.Gitlab.Instances
    , Outbound.Gitlab.Pipelines
    , Outbound.Gitlab.Projects
    , Outbound.Gitlab.RequestResponseUtils
    , Outbound.Storage.BuildStatuses.InMemory
    , UseCases.BuildStatuses
    , Util
  other-modules:
      Paths_gitlab_ci_build_statuses
  hs-source-dirs:
      src
  ghc-options:
    -fno-warn-orphans
    -fwrite-ide-info
    -hiedir=.hie
    -O2
    -flate-specialise
    -fspecialise-aggressively
    -fplugin=Polysemy.Plugin
    -Wmissing-export-lists
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson-casing
    , barbies
    , bifunctors
    , blaze-html
    , burrito >= 1.2.0.0
    , cache
    , clock
    , containers
    , either
    , extra
    , githash
    , higgledy
    , http-conduit
    , http-link-header
    , http-types
    , katip
    , lens
    , network-uri
    , polysemy == 1.5.0.0
    , polysemy-plugin == 0.3.0.0
    , polysemy-time
    , prometheus-client
    , prometheus-metrics-ghc
    , relude >= 1.0.0.1
    , servant
    , servant-blaze
    , servant-server
    , time
    , transformers
    , unix
    , unliftio
    , validation-selective
    , wai-extra
    , wai-middleware-prometheus
    , warp
  default-extensions:
    NoImplicitPrelude

executable gitlab-ci-build-statuses-exe
  import: common-options
  main-is: Main.hs
  other-modules:
      Paths_gitlab_ci_build_statuses
  hs-source-dirs:
      app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-T
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
      base >=4.7 && <5
    , gitlab-ci-build-statuses

test-suite gitlab-ci-build-statuses-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_gitlab_ci_build_statuses
      ConfigSpec
      GetStatusForProjectSpec
      OverallStatusSpec
      TestUtils
  hs-source-dirs:
      test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-T
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
      base >=4.7 && <5
    , gitlab-ci-build-statuses
    , containers
    , hedgehog
    , hspec
    , hspec-hedgehog
    , katip
    , network-uri
    , polysemy == 1.5.0.0
    , polysemy-plugin == 0.3.0.0
    , relude >= 1.0.0.1
    , validation-selective
  default-extensions:
    NoImplicitPrelude
